--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "nextjs",
-  "version": "0.1.0",
-  "private": true,
+  "name": "turnate",
+  "version": "1.0.0",
+  "dependencies": {
+    "@material-ui/core": "latest",
+    "gsap": "^3.5.1",
+    "next": "latest",
+    "prop-types": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-gsap": "^2.2.1",
+    "react-scrollmagic": "^2.2.0",
+    "styled-components": "latest"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "latest"
+  },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
     "start": "next start"
-  },
-  "dependencies": {
-    "next": "9.5.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
   }
 }
