--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "latest",
     "react-gsap": "^2.2.1",
     "react-scrollmagic": "^2.2.0",
+    "react-spring": "^8.0.27",
     "styled-components": "latest"
   },
   "devDependencies": {
