--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "latest",
     "react-gsap": "^2.2.1",
     "react-hook-form": "^6.9.0",
+    "react-scroll": "^1.8.1",
     "react-scrollmagic": "^2.2.0",
     "react-spring": "^8.0.27",
     "styled-components": "latest"
